# pakoo-svn

branches/0.1/pakoo/: ChangeLog  Doxyfile
branches/0.1/pakoo/src/: main.cpp  pakoo.cpp  pakoo.h  pakooconfig.kcfg  pakooview.cpp
branches/0.1/pakoo/src/portagewidgets/: Makefile.am  packageinfoview.h  packagelistview.cpp  packagelistview.h  packageview.h  portagehtmlgenerator.cpp  portagehtmlgenerator.h  portagetreeview.h
branches/jpetso-only/pakoo/: ChangeLog  Doxyfile  NEWS  pakoo.kdevelop
branches/jpetso-only/pakoo/src/: Makefile.am  actionview.cpp  actionview.h  installeractionview.cpp  installeractionview.h  pakoo.desktop  pakooconfig.kcfg  pakooview.h
branches/jpetso-only/pakoo/src/libpakt/: Makefile.am  portagebackend.cpp
branches/jpetso-only/pakoo/src/libpakt/core/: dependatom.h  package.cpp  package.h  packagelist.cpp  packageselector.cpp  packageselector.h  portagepackage.h  portagesettings.h
branches/jpetso-only/pakoo/src/libpakt/portageconfig/: Makefile.am
branches/jpetso-only/pakoo/src/libpakt/portageloader/: fileatomloaderbase.cpp  filepackagemaskloader.h  initialloader.h  packageloader.cpp  packageloader.h  portageinitialloader.cpp  portageml.h
branches/jpetso-only/pakoo/src/portagewidgets/: htmlgenerator.cpp  htmlgenerator.h  packageinfoview.h  packagelistview.cpp  packagelistview.h  packagetreeview.cpp  packagetreeview.h
trunk/doc/: Makefile.in
trunk/doc/en/: Makefile.in
trunk/pakoo/: AUTHORS  ChangeLog  Doxyfile  TODO  configure.in.in  pakoo.kdevelop
trunk/pakoo/admin/: detect-autoconf.sh
trunk/pakoo/src/: Makefile.am  actionview.cpp  actionview.h  i18n.h  installeractionview.cpp  main.cpp  pakoo.cpp  pakoo.h  pakoo_client.cpp  pakooconfig.kcfg  pakooiface.h  pakooui.rc  pakooview.cpp  pakooview.h  pref.cpp  pref.h
trunk/pakoo/src/libpakt/: Makefile.am  backendfactory.cpp  backendfactory.h  libpakt.h  portagebackend.cpp  portagebackend.h
trunk/pakoo/src/libpakt/base/: Makefile.am
trunk/pakoo/src/libpakt/base/config/: Makefile.am
trunk/pakoo/src/libpakt/base/core/: Makefile.am  dependatom.cpp  dependatom.h  fileloaderbase.cpp  fileloaderbase.h  package.h  packagelist.cpp  packagequeue.cpp  packagequeue.h  packageselector.cpp  packageselector.h  processjob.cpp  processjob.h
trunk/pakoo/src/libpakt/base/installer/: Makefile.am
trunk/pakoo/src/libpakt/base/loader/: Makefile.am  fileatomloaderbase.cpp  initialloader.h  multiplepackageloader.cpp  multiplepackageloader.h  packageloader.h
trunk/pakoo/src/libpakt/core/: Makefile.am  dependatom.cpp  package.h  packagecategory.h  packagelist.cpp  packageselector.h  packageversion.cpp  portagecategory.cpp  portagecategory.h  portagepackage.cpp  portagepackageversion.h  portagesettings.cpp  portagesettings.h
trunk/pakoo/src/libpakt/installer/: Makefile.am  emergeprocess.h
trunk/pakoo/src/libpakt/portage/: Makefile.am
trunk/pakoo/src/libpakt/portage/config/: Makefile.am
trunk/pakoo/src/libpakt/portage/core/: Makefile.am  dependatom.cpp  dependatom.h  portagecategory.h  portagepackage.cpp  portagepackage.h  portagepackageversion.cpp  portagepackageversion.h  portagesettings.h
trunk/pakoo/src/libpakt/portage/installer/: Makefile.am  emergeprocess.h  syncprocess.cpp  syncprocess.h
trunk/pakoo/src/libpakt/portage/loader/: Makefile.am  fileatomloaderbase.cpp  fileatomloaderbase.h  filemakeconfigloader.h  filepackagekeywordsloader.cpp  filepackagekeywordsloader.h  filepackagemaskloader.h  multiplepackageloader.h  portageinitialloader.cpp  portageinitialloader.h  portageml.cpp  portageml.h  portagepackageloader.h  portagetreescanner.cpp  portagetreescanner.h  profileloader.cpp  profileloader.h
trunk/pakoo/src/libpakt/portageloader/: fileatomloaderbase.h  filepackagekeywordsloader.cpp  filepackagekeywordsloader.h  portageml.cpp  portagepackageloader.cpp  portagepackageloader.h  portagetreescanner.cpp  portagetreescanner.h
trunk/pakoo/src/libqortage/: Makefile.am  backendfactory.cpp  backendfactory.h  libqortage.h  portagebackend.cpp  portagebackend.h
trunk/pakoo/src/libqortage/core/: Makefile.am  dependatom.cpp  dependatom.h  fileloaderbase.cpp  fileloaderbase.h  iasyncjob.h  ijob.h  package.cpp  package.h  packagecategory.cpp  packagelist.cpp  packagelist.h  packagequeue.h  packageselector.cpp  packageselector.h  packageversion.cpp  packageversion.h  portagesettings.cpp  portagesettings.h  portagetree.cpp  portagetree.h  processjob.cpp  processjob.h  threadedjob.cpp  threadedjob.h
trunk/pakoo/src/libqortage/installer/: Makefile.am  emergeprocess.cpp  emergeprocess.h
trunk/pakoo/src/libqortage/portageloader/: Makefile.am  fileatomloaderbase.cpp  fileatomloaderbase.h  filemakeconfigloader.cpp  filemakeconfigloader.h  filepackagekeywordsloader.cpp  filepackagekeywordsloader.h  filepackagemaskloader.cpp  filepackagemaskloader.h  initialloader.cpp  initialloader.h  loadingevent.cpp  loadingevent.h  multiplepackageloader.cpp  multiplepackageloader.h  packageloader.h  packagescanner.cpp  packagescanner.h  portageinitialloader.cpp  portageinitialloader.h  portageloaderbase.cpp  portageloaderbase.h  portageml.cpp  portageml.h  portagepackageloader.cpp  portagepackageloader.h  portagetreescanner.cpp  portagetreescanner.h  profileloader.cpp  profileloader.h
trunk/pakoo/src/portagewidgets/: Makefile.am  i18n.h  packagehtmlgenerator.cpp  packagehtmlgenerator.h  packageinfoview.cpp  packageinfoview.h  packagelistview.cpp  packagelistview.h  packagesearchline.cpp  packagesearchline.h  packagetreeview.cpp  packageview.cpp  packageview.h  pixmapnames.h  portagehtmlgenerator.cpp  portagehtmlgenerator.h  portagetreeview.cpp  portagetreeview.h
trunk/pakoo/templates/: cpp
trunk/src/: Makefile.am  i18n.h  pakoo.h  pakooview.cpp  pakooview.h
trunk/src/libqortage/core/: Makefile.am  dependatom.cpp  package.h  packageversion.h
trunk/src/libqortage/portageloader/: Makefile.am  fileatomloaderbase.cpp  portageloaderbase.h  portageml.h  portagetreescanner.cpp  portagetreescanner.h
trunk/src/portagewidgets/: Makefile.am  packageinfoview.h  packagelistview.cpp  packagelistview.h
(+23 files in other folders)
