INCLUDES = -I$(top_srcdir)/src/libqortage -I$(top_srcdir)/src/portagewidgets \
	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libportagewidgets.a
libportagewidgets_a_SOURCES = packagelistview.cpp packagesearchline.cpp \
	packageview.cpp packageinfoview.cpp packagetreeview.cpp
noinst_HEADERS = i18n.h packagelistview.h packagesearchline.h packageview.h \
	pixmapnames.h packageinfoview.h packagetreeview.h
