INCLUDES = -I$(top_srcdir)/src/libpakt -I$(top_srcdir)/src/portagewidgets \
	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libportagewidgets.a
libportagewidgets_a_SOURCES = packagelistview.cpp packagesearchline.cpp \
	packageview.cpp packageinfoview.cpp packagetreeview.cpp htmlgenerator.cpp \
	packagehtmlgenerator.cpp
noinst_HEADERS = i18n.h packagelistview.h packagesearchline.h packageview.h \
	pixmapnames.h packageinfoview.h packagetreeview.h htmlgenerator.h \
	packagehtmlgenerator.h
