INCLUDES = -I$(top_srcdir)/src/libqortage/core $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = dependatom.h package.h packageversion.h portagetree.h \
	dependatom.h package.h packageversion.h portagetree.h
noinst_LIBRARIES = libcore.a
libcore_a_SOURCES = dependatom.cpp package.cpp packageversion.cpp\
	portagetree.cpp

