INCLUDES = -I$(top_srcdir)/src/libqortage -I$(top_srcdir)/src/portagewidgets \
	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libportagewidgets.a
libportagewidgets_a_SOURCES = packageinfoview.cpp \
	packagelistview.cpp	packagesearchline.cpp packageview.cpp portagetreeview.cpp portagehtmlgenerator.cpp
noinst_HEADERS = i18n.h packageinfoview.h packagelistview.h \
	packagesearchline.h	packageview.h pixmapnames.h portagetreeview.h portagehtmlgenerator.h
