INCLUDES = $(all_includes)

noinst_HEADERS = threadedjob.h ijob.h fileloaderbase.h packageselector.h \
	packagecategory.h packagelist.h processjob.h packagequeue.h
noinst_LIBRARIES = libcore.a
libcore_a_SOURCES = dependatom.cpp package.cpp packageversion.cpp \
	threadedjob.cpp packageselector.cpp fileloaderbase.cpp packagecategory.cpp \
	packagelist.cpp processjob.cpp packagequeue.cpp


METASOURCES = AUTO
