INCLUDES = -I$(top_srcdir)/src/libqortage/core $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = portagesettings.h threadedjob.h ijob.h portagecategory.h \
	fileloaderbase.h packageselector.h packagecategory.h packagelist.h processjob.h
noinst_LIBRARIES = libcore.a
libcore_a_SOURCES = dependatom.cpp package.cpp packageversion.cpp \
		portagesettings.cpp threadedjob.cpp portagecategory.cpp packageselector.cpp \
		fileloaderbase.cpp packagecategory.cpp packagelist.cpp processjob.cpp

