INCLUDES = -I$(top_srcdir)/src/libpakt -I$(top_srcdir)/src/libpakt/installer \
	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libcore.a
libcore_a_SOURCES = dependatom.cpp fileloaderbase.cpp packagecategory.cpp\
	package.cpp packagelist.cpp packagequeue.cpp packageselector.cpp\
	packageversion.cpp processjob.cpp threadedjob.cpp
noinst_HEADERS = dependatom.h fileloaderbase.h packagecategory.h package.h\
	packagelist.h packagequeue.h packageselector.h packageversion.h\
	processjob.h threadedjob.h
